--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@ document.querySelector(".submit-btn").addEventListener("click", async () => {
   };
 
   const response = await fetch("https://script.google.com/macros/s/AKfycbzTrY1MUOgE4tBUBMlkb-5cyysCSqXrmtlPriffgGg5Ro9UEpWzldwAD0X2UXZnhdZ_/exec", {
+    const params = new URLSearchParams({
+  client_name: 'Иван',
+  contact: '8911',
+  manager: 'М1',
+  region: 'Москва',
+  comment: 'Тест'
+});
+
+fetch("https://script.google.com/macros/s/AKfycbxbW1Xsm8ZqYc-tifOO-Xmg_LXC_To6CfaY2DopJQYufGN9pTo0LKMPNRXrgRIXW-sV/exec?" + params.toString())
+  .then(r => r.text())
+  .then(console.log);
   });
 
   if (response.ok) {
